[package]
name = "token-bridge-cosmwasm"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2018"
description = "Wormhole token bridge"

[lib]
name = "cw_token_bridge"
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []
# The 'full' feature enables all non-shutdown functionality.  Without the 'full' feature
# enabled, only shutdown functionality is enabled (basically governance).
full = ["wormhole-cosmwasm/full"]
default = ["full"]

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
cw20-wrapped-2 = { version = "0.1.0", features = ["library"] }
wormhole-cosmwasm = { version = "0.1.0", default-features = false, features = ["library"] }
thiserror = { version = "1.0.31" }
sha3 = { version = "0.9.1", default-features = false }
hex = "0.4.2"

[dev-dependencies]
terraswap = "2.6.1"
serde-json-wasm = "0.4"