[package]
name = "wormchain-accounting"
version = "0.1.0"
authors = ["Wormhole Project Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
accounting = "0.1.0"
anyhow = "1"
base64 = "0.13"
cosmwasm-schema = "1"
cosmwasm-std = "1"
cosmwasm-storage = "1"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
hex = "0.4.3"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_wormhole = "0.1.0"
thiserror = { version = "1.0.31" }
tinyvec = { version = "1.6", default-features = false, features = ["alloc", "serde"]}
tokenbridge = { package = "token-bridge-terra-2", version = "0.1.0", features = ["library"] }
wormhole-bindings = "0.1.0"
wormhole-core = { version = "0.1.0", features = ["schemars"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cw-multi-test = "0.13.2"
wormhole-bindings = { version = "0.1", features = ["fake"] }
