[package]
name = "wormhole-ibc"
version = "0.1.0"
authors = ["Wormhole Project Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
wormhole-bridge-terra-2 = { version = "0.1.0", default-features = false, features = ["library", "full"] }
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cosmwasm-schema = "1"
anyhow = "1"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
semver = "1.0.16"
thiserror = "1.0.31"