[package]
name = "wormhole-ibc"
version = "0.1.0"
authors = ["Wormhole Project Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
wormhole = { version = "0.1.0", default-features = false, features = ["library", "full"], package = "wormhole-bridge-terra-2" }
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
cw-storage-plus = "0.13.2"
cosmwasm-schema = "1"
anyhow = "1"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
semver = "1.0.16"
thiserror = "1.0.31"
serde_wormhole = "0.1.0"
wormhole-sdk = { version = "0.1.0", features = ["schemars"], package = "wormhole-core" }

[dev-dependencies]
hex = "0.4.3"